# app/Models/Products.php
@@ -1,0 +1,18 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+class Products extends Model
+{
+    use HasFactory;
+
+    protected $fillable = ['name','image', 'price', 'description', 'category_id'];
+
+    public function category()
+    {
+        return $this->belongsTo(Categories::class);
+    }
+}
