# routes/api.php
@@ -1,6 +1,7 @@
 <?php
 
 use App\Http\Controllers\Api\CategoriesController;
+use App\Http\Controllers\Api\ProductsController;
 use App\Http\Controllers\Api\SenderController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
@@ -11,10 +12,11 @@ Route::get('/user', function (Request $request) {
 
 Route::get('/categories', [CategoriesController::class, 'getList']);
 Route::post('/categories/create', [CategoriesController::class, 'create']);
-
 Route::get('/categories/{id}', [CategoriesController::class, 'show']);
-
 Route::post('/categories/edit/{id}', [CategoriesController::class, 'edit']);
 Route::delete('/categories/{id}', [CategoriesController::class, 'delete']);
 
 Route::post('/send/email', [SenderController::class, 'send_email']);
+
+Route::get('/products', [ProductsController::class, 'getList']);
+Route::post('/products/create', [ProductsController::class, 'create']);
